add project structure

--- a/KalmanFilter.vcxproj
+++ b/KalmanFilter.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="multiDim.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C44E7C93-534E-49FC-A770-FE422DFF7AD5}</ProjectGuid>
